[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "snmp_rp"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
homepage = "https://github.com/LukaOliveira/snmp_rp"
documentation = "https://github.com/LukaOliveira/snmp_rp"
repository = "https://github.com/LukaOliveira/snmp_rp"



